--- a/index.html
+++ b/index.html
@@ -42,15 +42,22 @@
 
         <h2 class="current-city" id="current-city"><strong>Boston</strong></h2>
 
-        <p id="current-date">Sunday 8:03</p>
+        <p id="current-date" class="current-date">Sunday 8:03</p>
         <span
           >scattered clouds
           <br />
-          humidity: 66%, wind: 14mph
+          humidity:<span class="percentages">66%</span>, wind:<span
+            class="percentages"
+            >14mph</span
+          >
         </span>
         <br />
-        <span id="current-temperature-icon">⛅︎</span>
-        <span class="current-temperature" id="current-temperature">00</span>℉
+        <div class="icon-temp">
+          <span class="current-temperature-icon" id="current-temperature-icon"
+            >⛅︎</span
+          >
+          <span class="current-temperature" id="current-temperature">00</span>℉
+        </div>
         <br />
       </main>
       <f
