--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@
         <h2 class="current-city" id="current-city"><strong></strong></h2>
 
         <p id="current-date" class="current-date"></p>
-        <span
-          ><span id="condition"></span>
-          <br />
-          humidity:<span class="percentages" id="humidity"></span>, wind:<span
-            class="percentages"
-            id="wind"
-          ></span>
-        </span>
+        <span id="condition"></span>
+        <br />
+        humidity:<span class="percentages" id="humidity"></span>, wind:<span
+          class="percentages"
+          id="wind"
+        ></span>
         <br />
         <div class="container">
           <div id="icon"></div>
